--- a/synthetics/rules/periphrastic.yaml
+++ b/synthetics/rules/periphrastic.yaml
@@ -1,19 +1,15 @@
+-ㄴ 가운데: ETM$ ^가운데/NNG
 -ㄴ 감이 있-: ETM$ ^감/NNG ^있/VA
--ㄴ/ㄹ 것이 틀림없-: ETM$ ^것/NNB ^틀림없/VA
--ㄴ/ㄹ 것 같-: ETM$ ^것/NNB ^같/VA
--ㄴ/ㄹ 것: ETM$ ^것/NNB
--ㄴ 격으로/이-: ETM$ ^격/NNB
+-ㄴ 격(이-): ETM$ ^격/NNB
 -ㄴ 결과: (NNG+.+/XSV|VV)\+.+/ETM$ ^결과/NNG(\+,/SP)?$
--ㄴ/ㄹ 겸: ETM$ ^겸/NNB
--ㄴ/ㄹ 경우(,|에|에는): ETM$ ^경우/NNG(에/JKB\+[ㄴ는]/JX|\+,/SP)?$
 -ㄴ 고로: ETM$ ^고로/MAG
 -ㄴ 관계로: ETM$ ^관계/NNG\+로/JKB
+-ㄴ 길에: [는던]/ETM$ ^길/NNG\+에/JKB$
 -ㄴ 김에: ETM$ ^김/NNB\+에/JKB
 -ㄴ 까닭에: ETM$ ^까닭/NNG\+에/JKB
 -ㄴ 까닭으로: ETM$ ^까닭/NNG\+으로/JKB
 -ㄴ 끝에: ETM$ ^끝/NNG\+에/JKB
 -ㄴ 나머지: ETM$ ^나머지/NNG(\+,/SP)?$
--ㄴ/ㄹ 노릇이-: ETM$ ^노릇/NNG
 -ㄴ 다음(에): ETM$ ^다음/NNG
 -ㄴ 대로: ETM$ ^대로/NNB
 -ㄴ 대신: ETM$ ^대신/NNG
@@ -22,91 +18,121 @@
 -ㄴ 덕으로: ETM$ ^덕/NNG
 -ㄴ 덕택에: ETM$ ^덕택/NNG
 -ㄴ 덕택으로: ETM$ ^덕택/NNG
--ㄴ/ㄹ 데가 없: ETM$ ^데/NNB ^없/VA
 -ㄴ 데에: ETM$ ^데/NNB
+-ㄴ 도중(에): ETM$ ^가운데/NNG
 -ㄴ 동시에: ETM$ ^동시/NNG[^$]+
+-ㄴ 동안(에): ETM$ ^동안/NNG
+-ㄴ 둥: ETM$ ^둥/NNB$
 -ㄴ 뒤(에): ETM$ ^뒤/NNG
+-ㄴ 등: ETM$ ^등/NNB
+-ㄴ 바 있-: ETM$ ^바/NNB ^있/VA
+-ㄴ 바(,): ETM$ ^바/NNB(\+,/SP)?$
+-ㄴ 바람에: ETM$ ^바람/NNB\+에/JKB$
+-ㄴ 반면(,|에): ETM$ ^반면/NNG
+-ㄴ 반면(에): ETM$ ^반면/NNG
+-ㄴ 법이 없-: ETM$ ^법/NNB+./J..?$ ^없/VA
+-ㄴ 법이-: ETM$ ^법/NNB\+이/VCP
+-ㄴ 사이(에): ETM$ ^사이/NNG(\+에/JKB)?$
+-ㄴ 상태로: ETM$ ^상태/NNG
+-ㄴ 수가 있-: ETM$ ^수/NNB\+./(JX|JKS)$ ^있/VA
+-ㄴ 수밖에 없-: ETM$ ^수/NNB$ ^밖에/JX$ ^없/VA
+-ㄴ 식(이-): ETM$ ^식/NNB
+-ㄴ 양하-: ETM$ ^양/NNB\+하/XSA
+-ㄴ 연후에: ETM$ ^연후/NNG
+-ㄴ 와중에: ETM$ ^와중/NNG\+에/JKB
+-ㄴ 외에: ETM$ ^외/NNB\+에/JKB
+-ㄴ 의도(로|에서): ETM$ ^의도/NNG\+(로|에서)/JKB
+-ㄴ 이래(,|로): ETM$ ^이래/NNB
+-ㄴ 이상: ETM$ ^이상/NNG(\+,/SP)?$
+-ㄴ 이유로: ETM$ 이유/NNG\+로/JKB
+-ㄴ 이후(로|에): ETM$ ^이후/NNG
+-ㄴ 적이 없-: ETM$ ^적/NNB ^없/VA
+-ㄴ 적이 있-: ETM$ ^적/NNB ^있/VA
+-ㄴ 족족: ETM$ ^족족/NNB
+-ㄴ 줄(을) 모르-:  [ㄴ은는]/ETM$ ^줄/NNB ^모르/VV
+-ㄴ 줄(을) 알-: [ㄴ은는]/ETM$ ^줄/NNB ^알/VV
+-ㄴ 중(이-): ETM$ ^중/NNB
+-ㄴ 직후: ETM$ ^직후/NNG
+-ㄴ 차(이-): ETM$ ^차/NNB
+-ㄴ 찰나(에): ETM$ ^찰나/NNG
+-ㄴ 채(로): ETM$ ^채/NNB
+-ㄴ 척(하-): ETM$ ^척/NNB
+-ㄴ 체(하-): ETM$ ^체/NNB
+-ㄴ 축에 들-: ETM$ ^축/NNB ^들/VV
+-ㄴ 축에 속하-: ETM$ ^축/NNB ^속하/VV
+-ㄴ 탓(이-): ETM$ ^탓/NNG
+-ㄴ 통에: ETM$ ^통/NNB\+에/JKB
+-ㄴ 편(이-): ETM$ ^편/NNB
+-ㄴ 한: ETM$ ^한/NNG
+-ㄴ 한에서: ETM$ ^한/NNG\+에서/JKB$
+-ㄴ 한이 있(어도|더라도): ETM$ ^한/NNG\+이/JKS$ ^있/VA
+-ㄴ 한편: ETM$ ^한편/NNG
+-ㄴ 후(에): ETM$ ^후/NNG
+-ㄴ/ㄹ 것 같-: ETM$ ^것/NNB ^같/VA
+-ㄴ/ㄹ 것: ETM$ ^것/NNB
+-ㄴ/ㄹ 것이 틀림없-: ETM$ ^것/NNB ^틀림없/VA
+-ㄴ/ㄹ 겸: ETM$ ^겸/NNB
+-ㄴ/ㄹ 경우(,|에|에는): ETM$ ^경우/NNG(에/JKB\+[ㄴ는]/JX|\+,/SP)?$
+-ㄴ/ㄹ 노릇이-: ETM$ ^노릇/NNG
+-ㄴ/ㄹ 데가 없: ETM$ ^데/NNB ^없/VA
+-ㄴ/ㄹ 듯: ETM$ ^듯/NNB$
 -ㄴ/ㄹ 듯싶-: ETM$ ^듯/NNB\+싶/VX
 -ㄴ/ㄹ 듯이: ETM$ ^듯이/(NNB|EC)
 -ㄴ/ㄹ 듯하-: ETM$ ^듯/NNB\+하/XSA
+-ㄴ/ㄹ 때: ETM$ ^때/NNG
 -ㄴ/ㄹ 마당에: ETM$ ^마당/NNB\+에/JKB
 -ㄴ/ㄹ 만큼: ETM$ ^만큼/NNB
 -ㄴ/ㄹ 모양이-: ETM$ ^모양/NNB
 -ㄴ/ㄹ 바에(야|는): ETM$ ^바/NNB\+에/JKB
--ㄴ 바(,): ETM$ ^바/NNB(\+,/SP)?$
--ㄴ 바 있-: ETM$ ^바/NNB ^있/VA
--ㄴ 반면(,|에): ETM$ ^반면/NNG
--ㄴ 법이-: ETM$ ^법/NNB\+이/VCP
--ㄴ 법이 없-: ETM$ ^법/NNB\+이/JKS ^없/VA
 -ㄴ/ㄹ 법하-: ETM$ ^법/NNB\+하/XSA
 -ㄴ/ㄹ 성싶-: ETM$ ^성/NNB\+싶/VX
 -ㄴ/ㄹ 셈이-: ETM$ ^셈/NNB
 -ㄴ/ㄹ 시기(에): ETM$ ^시기/NNG
--ㄴ/ㄹ 때: ETM$ ^때/NNG
--ㄴ 식(이-): ETM$ ^식/NNB
 -ㄴ/ㄹ 양(이-): ETM$ ^양/NNB
--ㄴ 양하-: ETM$ ^양/NNB\+하/XSA
--ㄴ 연후에: ETM$ ^연후/NNG
--ㄴ 이래(,|로): ETM$ ^이래/NNB
--ㄴ 이상: ETM$ ^이상/NNG(\+,/SP)?$
--ㄴ 이후(로|에): ETM$ ^이후/NNG
--ㄴ 상태로: ETM$ ^상태/NNG
--ㄴ 적이 있-: ETM$ ^적/NNB ^있/VA
--ㄴ 적이 없-: ETM$ ^적/NNB ^없/VA
+-ㄴ/ㄹ 즈음: ETM$ ^즈음
 -ㄴ/ㄹ 지: ETM$ ^지/NNB
 -ㄴ/ㄹ 지경(이-): ETM$ ^지경/NNB
--ㄴ 직후: ETM$ ^직후/NNG
--ㄴ/ㄹ 참이-: ETM$ ^참/NNB
--ㄴ 채(로): ETM$ ^채/NNB
--ㄴ 척(하-): ETM$ ^척/NNB
--ㄴ 체(하-): ETM$ ^척/NNB
--ㄴ 축에 들-: ETM$ ^축/NNB ^들/VV
--ㄴ 축에 속하-: ETM$ ^축/NNB ^속하/VV
--ㄴ 탓(이-): ETM$ ^탓/NNG
+-ㄴ/ㄹ 참(이-): ETM$ ^참/NNB
 -ㄴ/ㄹ 터(이-): ETM$ ^터/NNB
--ㄴ/ㄹ 판국(이-): ETM$ ^판국/NNG
 -ㄴ/ㄹ 판(이-): ETM$ ^판/NNB
--ㄴ 편(이-): ETM$ ^편/NNB
--ㄴ 한: ETM$ ^한/NNG
--ㄴ 후(에): ETM$ ^후/NNG
--ㄴ가 보-: ㄴ가/EF$ ^보/VX
--ㄴ/던가 싶-: [ㄴ던]가/EF$ ^싶/VX
--ㄴ데도 불구하고: (ㄴ데|는데)/EC\+도/JX$ ^불구하/VV
+-ㄴ/ㄹ 판국(이-): ETM$ ^판국/NNG
 -ㄴ/ㄹ지도 모르-: (ㄴ지|는지|ㄹ지|을지)/EF\+도/JX$ ^모르/VV
--ㄹ 겨를이 없-: ETM$ ^겨를/NNB ^없(/VA|이/MAG)
+-ㄴ가 보-: ㄴ가/EF$ ^보/VX
+-ㄴ가 싶-: [ㄴ던]가/EF$ ^싶/VX
+-ㄴ가 하면: 는가/EF$ ^하/VV\+면/EC
 -ㄴ다는/-려는/-려던/ㄹ 계획이-: (ㄹ|을|단|다는|ㄴ다는|려는|으려는|려던|으려던)/ETM$ ^계획/NNG
+-ㄴ다는/-려는/-려던/ㄹ 생각(이-): (ㄹ|을|려는|으려는|려던|으려던|자던|자는)/ETM$ ^생각/NNG\+(이/VCP|에/JKB|에서/JKB)
+-ㄴ데 반하여: [ㄴ는]데/EC$ ^반하/VV\+아/EC
+-ㄴ데 비(해|하여): [ㄴ는]데/EC$ ^비/NNG\+하/XSV
+-ㄴ데도 불구하고: (ㄴ데|는데)/EC\+도/JX$ ^불구하/VV
+-ㄹ 것(이라는|으로) 전망(이-|하-|되-): ETM$ ^것/NNB ^전망/NNG
+-ㄹ 겨를이 없-: ETM$ ^겨를/NNB ^없(/VA|이/MAG)
 -ㄹ 나위(가) 없-: ETM$ ^나위/NNB ^없(/VA|이/MAG)
 -ㄹ 녘에: ETM$ ^녘/NNB
 -ㄹ 따름(이-): ETM$ ^따름/NNB
--ㄹ/-던/-려던 때: (ㄹ|을|던|려던)/ETM$ ^때/NNG
 -ㄹ 리(가) 없-: ETM$ ^리/NNB ^없/VA
 -ㄹ 리(가) 있-: ETM$ ^리/NNB ^있/VA
 -ㄹ 리가 만무하-: ETM$ ^리/NNB ^만무/NNG
--ㄹ 만하-: ETM$ ^만/NNB\+하/XSA
 -ㄹ 만도 하-: ETM$ ^만/NNB\+도/JX$ ^하/V
+-ㄹ 만하-: ETM$ ^만/NNB\+하/XSA
 -ㄹ 무렵(에): ETM$ ^무렵/NNB
 -ㄹ 방침이-: ETM$ ^방침/NNG
 -ㄹ 뻔(하-): ETM$ ^뻔/NNB
 -ㄹ 뿐(더러/이-): ETM$ ^뿐/NNB
 -ㄹ 뿐(만) 아니라: ETM$ ^뿐/NNB ^아니/VCN
--ㄴ다는/-려는/-려던/ㄹ 생각(이-): (ㄹ|을|려는|으려는|려던|으려던|자던|자는)/ETM$ ^생각/NNG\+(이/VCP|에/JKB|에서/JKB)
 -ㄹ 수 없-: ETM$ ^수/NNB ^없/VA
 -ㄹ 수 있-: ETM$ ^수/NNB ^있/VA
 -ㄹ 수밖에 없-: ETM$ ^수/NNB\+밖에/JX ^없/VA
--ㄹ 시에: ETM$ ^시/NNB
+-ㄹ 시(에): ETM$ ^시/NNB
 -ㄹ 예정이-: [ㄹ을]/ETM$ ^예정/NNG
 -ㄹ 작정이-: ETM$ ^작정/NNG
 -ㄹ 적에: ETM$ ^적/NNB
 -ㄹ 전망이-: [ㄹ을]/ETM$ ^전망/NNG
--ㄹ 것(이라는|으로) 전망(이-|하-|되-): ETM$ ^것/NNB ^전망/NNG
--다/라는 전망(이-): (다는|ㄴ다는|리란|으리란|리라는|으리라는)/ETM$ ^전망/NNG
 -ㄹ 정도(이-): [ㄹ을]/ETM$ 정도/NNG
--ㄴ 줄(을) 모르-:  [ㄴ은는]/ETM$ ^줄/NNB ^모르/VV
--ㄴ 줄(을) 알-: [ㄴ은는]/ETM$ ^줄/NNB ^알/VV
 -ㄹ 줄(을) 모르-: [ㄹ을]/ETM$ ^줄/NNB ^모르/VV
 -ㄹ 줄(을) 알-: [ㄹ을]/ETM$ ^줄/NNB ^알/VV
--ㄴ/ㄹ 즈음: ETM$ ^즈음
 -ㄹ 턱(이) 없-: ETM$ ^턱/NNB ^없/VA
+-ㄹ/-던/-려던 때: (ㄹ|을|던|려던)/ETM$ ^때/NNG
 -ㄹ까 보-: [ㄹ을]까/EF$ ^보/V
 -ㄹ까 싶-: [ㄹ을]까/EF$ ^싶/VX
 -ㄹ까 하-: [ㄹ을]까/EF$ ^하/VV
@@ -123,7 +149,6 @@
 -고 싶-: 고/EC$ ^싶/VX
 -고 있-: 고/EC$ ^있/VX
 -고 있음에도: 고/EC$ ^있/VX\+음/ETN\+에/JKB\+도/JX
--려고 하-: (려고|으려고)/EC$ ^하/VX
 -고 해서: \+고/EC$ ^하/VX\+아서/EC
 -고는 하-: 고는/EC$ ^하/VX
 -고도 남-: (고도/EC|고/EC\+도/JX)$ ^남/V
@@ -133,7 +158,6 @@
 -기 때문(이-): 기/ETN$ ^때문/NNB
 -기 마련이-: 기/ETN$ ^마련/NNB
 -기 망정이-: 기/ETN$ ^망정/NNB
--기(가) 무섭게: 기/ETN ^무섭/VA\+게/EC$
 -기 바라-: 기/ETN ^바라/VV
 -기 쉽-: 기/ETN ^쉽/VA
 -기 시작하-: 기/ETN ^시작/NNG
@@ -144,11 +168,11 @@
 -기 위하-: 기/ETN ^위하/VV
 -기 이전에: 기/ETN$ ^이전/NNG
 -기 일쑤이-: 기/ETN ^일쑤/NNG
--기 전에: 기/ETN ^전/NNG
--기 직전에: 기/ETN$ ^직전/NNG
 -기 짝이 없-: 기/ETN ^짝/NNG\+이/JKS$ ^없/VA
 -기 틀리-: 기/ETN ^틀리/VV
--서는 한이 없-: 서/EC\+는/JX$ ^한/NNG\+이/JKS$ ^없/VA
+-기(가) 무섭게: 기/ETN ^무섭/VA\+게/EC$
+-기(에) 따라: 기/ETN ^따르/VV
+-기(에) 앞서: 기/ETN ^앞서/(VV|MAG)
 -기가 바쁘게: 기/ETN ^바쁘/VA
 -기가 이를 데 없-: 기/ETN$ ^이르/VV\+ㄹ/ETM$ ^데/NNB ^없/VA
 -기까지 하-: 기/ETN\+까지/JX$ ^하/VX
@@ -157,157 +181,93 @@
 -기도 하-: 기/ETN\+도/JX$ ^하/VX
 -기로 하-: 기/ETN\+로/JKB$ ^하/VV
 -기만 하-: 기/ETN\+만/JX$ ^하/V
--기(에) 따라: 기/ETN ^따르/VV
--기(에) 앞서: 기/ETN ^앞서/(VV|MAG)
 -나 보-: 나/(EC/EF)$ ^보/(VX|VV)
 -나 싶-: 나/(EC/EF)$ ^보/VX
--는 가운데: ETM$ ^가운데/NNG
--는 격(이-): ETM$ ^격/NNB
--는/던 길에: [는던]/ETM$ ^길/NNG\+에/JKB$
--는 대로:
--는 대신(에):
--는 도중(에):
--는 동시에:
--는 동안(에):
--는 둥:
--는 듯싶-:
--는 듯하-:
--는 등:
--는 바람에:
--는 반면(에):
--는 법이 없-:
--는 법이-:
--는 사이(에):
--는 성싶-:
--는 셈이-:
--는 수가 있-:
--는 수밖에 없-:
--는 와중에:
--는 외에:
--는 이상:
--는 족족:
--는 중(에):
--는 중이-:
--는 차(에):
--는 찰나(에):
--는 참에:
--는 참이-:
--는 척하-:
--는 통에:
 -는 하-: 는/JX$ ^하/VX
--는 한에서:
--는 한이 있더라도:
--는 한이 있어도:
--는 한편:
--는가 하면:
--는데 반하여:
--는데 비하여:
--는데 비해:
--니 망정이-:
--다 못해:
--다 보-:
--다 뿐이-:
--던 듯하-:
--던 모양이-:
--던 셈이-:
--던 중(에):
--던 차(에):
--던 참이-:
--던 터(에):
--던 터이-:
--도록 하-:
--려(고) 들-:
--려는 참에:
--로(서)는 처음으로:
--를 놓고:
--를 두고:
--만에 처음으로:
--면 안 되-:
--면 좋겠-:
--어 가-:
--어 가지고:
--어 계시-:
--어 나가-:
--어 내-:
--어 놓-:
--어 달-:
--어 대-:
--어 두-:
--어 드리-:
--어 들-:
--어 마지않-:
--어 먹-:
--어 버릇하-:
--어 버리-:
--어 보-:
--어 보이-:
--어 오-:
--어 있-:
--어 주-:
--어 죽겠-:
--어 지-:
--어 치우-:
--어 터지-:
--어도 되-:
--어도 좋-:
--어야 되-:
--어야 하-:
--었으면 하-:
--에 관하-:
--에 대하-:
--에 따르-:
--에 따르면:
--에 비해:
+-다 못하-: 다/EC$ ^못하/VX
+-다 보-: 다/EC$ ^보/VX
+-다/라는 전망(이-): (다는|ㄴ다는|리란|으리란|리라는|으리라는)/ETM$ ^전망/NNG
+-도록 하-: 도록/EC$ ^하/VX
+-려(고) 들-: 려고?/EC$ ^들/VX
+-려고 하-: (려고|으려고)/EC$ ^하/VX
+-로(서)는 처음으로: 으?로서/JKB\+[ㄴ는]/JX$ ^처음/NNG
+-를 놓고: JKO$ ^놓/VV\+고/EC
+-를 두고: JKO$ ^두/VV\+고/EC
+-만에 처음으로: 만/NNB\+에/JKB$ ^처음/NNG
+-면 안 되-: 으?면/EC$ ^안/MAG$ ^되/VV
+-면 좋-: 면/EC$ ^좋/VA
+-서는 한이 없-: 서/EC\+는/JX$ ^한/NNG\+이/JKS$ ^없/VA
+-어 가-: [아어]/EC$ ^가/VX
+-어 가지고: [아어]/EC$ ^가지/VX
+-어 계시-: [아어]/EC$ ^계시/VX
+-어 나가-: [아어]/EC$ ^나가/VX
+-어 내-: [아어]/EC$ ^내/VX
+-어 놓-: [아어]/EC$ ^놓/VX
+-어 달-: [아어]/EC$ ^달/VX
+-어 대-: [아어]/EC$ ^대/VX
+-어 두-: [아어]/EC$ ^두/VX
+-어 드리-: [아어]/EC$ ^드리/VX
+-어 들-: [아어]/EC$ ^들/VX
+-어 마지않-: [아어]/EC$ ^마지않/VX
+-어 먹-: [아어]/EC$ ^먹/VX
+-어 버릇하-: [아어]/EC$ ^버릇하/VX
+-어 버리-: [아어]/EC$ ^버리/VX
+-어 보-: [아어]/EC$ ^보/VX
+-어 보이-: [아어]/EC$ ^보이/VV
+-어 오-: [아어]/EC$ ^오/VX
+-어 있-: [아어]/EC$ ^있/VX
+-어 주-: [아어]/EC$ ^주/VX
+-어 죽겠-: [아어]/EC$ ^죽/VV\+겠/EP
+-어 지-: [아어]/EC$ ^지/VV
+-어 치우-: [아어]/EC$ ^치우/VX
+-어도 되-: [아어]도/EC$ ^되/VV
+-어도 좋-: [아어]도/EC$ ^좋/VA
+-어야 되-: [아어]야/EC$ ^되/VV
+-어야 하-: [아어]야/EC$ ^하/VX
+-에 관하-: 에/JKB$ ^관하/VV
+-에 대하-: 에/JKB$ ^대하/VV
+-에 따라: 에/JKB$ ^따르/VV\+아/EC
+-에 따르면: 에/JKB$ ^따르/VV\+면/EC
+-에 비해: 에/JKB$ ^비/NNG\+하/XSV\+아/EC
 -에도 불구하고: 에/JKB\+도/JX$ ^불구하/VV
--에서는 처음으로:
--와/과 다르게:
--와/과 달리:
--와/과 동시에:
--와/과 함께:
--을 끝으로:
--을 대상으로:
--을 마지막으로:
--을 시작으로:
--을 위해(서):
--을 통해:
--을 포함:
--의 경우:
--이 아니-:
--이 아니라:
--지 말-:
--지 못하-:
--지 싶-:
--지 않-:
-~ 때문에:
-~ 이유로:
-관형절_수식:
-끝에:
-대상으로:
-목적으로 보-:
-목적으로:
-의도로 보-:
-의도로:
-
-(표지)주제:
-(표지)부연":
-(의존소)후:
-(의존소)채:
-(의존소)직후:
-(의존소)직전:
-(의존소)중:
-(의존소)전:
-(의존소)이후:
-(의존소)이하:
-(의존소)이전:
-(의존소)이외:
-(의존소)이상:
-(의존소)이내:
-(의존소)시:
-(의존소)뿐:
-(의존소)미만:
-(의존소)따위:
-(의존소)등:
-(의존소)동안:
-(의존소)도중:
-(의존소)대비:
-(의존소)기준:
+-에서(는) 처음(으로): 에서/JKB(\+[ㄴ는]/JX)?$ ^처음/NNG
+-와/과 다르게: [와과]/JKB$ ^다르/VA\+게$
+-와/과 달리: [와과]/JKB$ ^달리/MAG
+-와/과 동시에: [와과]/JKB$ ^동시/NNG\+에/JKB
+-와/과 함께: [와과]/JKB$ ^함께/MAG(\+,/SP)?$
+-으면 하-: 으면/EC$ ^하/VX
+-을 대상으로: JKO$ 대상/NNG\+으로/JKB
+-을 마지막으로: JKO$ 마지막/NNG\+으로/JKB
+-을 시작으로: JKO$ 시작/NNG\+으로/JKB
+-을 위하-: JKO$ ^위하/VV
+-을 통해: JKO$ ^통하/VV
+-을 포함: JKO$ ^포함/NNG
+-을/를 끝으로: JKO$ 끝/NNG\+으로/JKB
+-의 경우: 의/JKG$ ^경우/NNG
+-이 아니-: 이/JKS$ ^아니/VCN
+-지 말-: 지/EC$ ^말/VX
+-지 못하-: 지/EC$ ^못하/VX
+-지 싶-: 지/EC$ ^싶/VX
+-지 않-: 지/EC$ ^않/VX
+~ 기준: (NP|NR|NNB|NNG|MMD|MAG|SN|SW|ETN|XSN)$ ^기준/NNG
+~ 대비: (NP|NR|NNB|NNG|MMD|MAG|SN|SW|ETN|XSN)$ ^대비/NNG
+~ 도중: (NP|NR|NNB|NNG|MMD|MAG|SN|SW|ETN|XSN)$ ^도중/NNG
+~ 동안: (NP|NR|NNB|NNG|MMD|MAG|SN|SW|ETN|XSN)$ ^동안/NNG
+~ 등: (NP|NR|NNB|NNG|MMD|MAG|SN|SW|ETN|XSN)$ ^등/NNB
+~ 따위: (NP|NR|NNB|NNG|MMD|MAG|SN|SW|ETN|XSN)$ ^따위/NNB
+~ 때문에: (NP|NR|NNB|NNG|MMD|MAG|SN|SW|XSN)$ ^때문/NNB
+~ 미만: (NP|NR|NNB|NNG|MMD|MAG|SN|SW|ETN|XSN)$ ^미만/NNG
+~ 뿐: (NNB|NNG|MMD|MAG|SN|SW|ETN|XSN)$ ^뿐/NNB
+~ 시: (NNB|NNG|MMD|MAG|SN|SW|ETN|XSN)$ ^시/NNB
+~ 이내: (NP|NR|NNB|NNG|MMD|MAG|SN|SW|ETN|XSN)$ ^이내/NNG
+~ 이상: (NP|NR|NNB|NNG|MMD|MAG|SN|SW|ETN|XSN)$ ^이상/NNG
+~ 이외: (NP|NR|NNB|NNG|MMD|MAG|SN|SW|ETN|XSN)$ ^이외/NNG
+~ 이유로: [을를]/JKO$ ^이유/NNG\+로/JKB
+~ 이전: (NP|NR|NNB|NNG|MMD|MAG|SN|SW|ETN|XSN)$ ^이전/NNG
+~ 이하: (NP|NR|NNB|NNG|MMD|MAG|SN|SW|ETN|XSN)$ ^이하/NNG
+~ 이후: (NP|NR|NNB|NNG|MMD|MAG|SN|SW|ETN|XSN)$ ^이후/NNG
+~ 전: (NP|NNG|NNB|MMD|ETN|XSN)$ ^전/NNG
+~ 중: (NP|NR|NNB|NNG|MMD|MAG|SN|SW|ETN|XSN)$ ^중/NNB
+~ 직전: (NP|NNG|ETN|XSN)$ ^직전/NNG
+~ 직후: (NP|NNG|ETN|XSN)$ ^직전/NNG
+~ 후: (NP|NNG|NNB|MMD|ETN|XSN)$ ^후/NNG
